--- a/GameOfLifeMaui/Resources/Styles/Styles.xaml
+++ b/GameOfLifeMaui/Resources/Styles/Styles.xaml
@@ -4,12 +4,60 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
     
-    <Style TargetType="TableView">
-        <Setter Property="BackgroundColor" Value="{AppThemeBinding Light={StaticResource Gray600}, Dark={StaticResource Gray400}}" />
+    <Style TargetType="Grid" Class="Settings">
+        <Setter Property="Padding" Value="10, 10, 10, 10"/>
+        <Setter Property="BackgroundColor" Value="{AppThemeBinding Light={StaticResource LightmodePageBackground}, Dark={StaticResource DarkmodePageBackground}}" />
+    </Style>
+    
+    <Style TargetType="Label" Class="SettingsSmall">
+        <Setter Property="BackgroundColor" Value="{AppThemeBinding Light={StaticResource LightmodePageBackground}, Dark={StaticResource DarkmodePageBackground}}" />
+        <Setter Property="HorizontalOptions" Value="Fill"/>
+        <Setter Property="VerticalOptions" Value="Start"/>
+        <Setter Property="HeightRequest" Value="20"/>
+        <Setter Property="FontSize" Value="12"/>
+        <Setter Property="TextColor" Value="{AppThemeBinding Light={StaticResource LightmodeSecondary}, Dark={StaticResource DarkmodeSecondary}}"/>
+    </Style>
+    
+    <Style TargetType="Label" Class="Settings">
+        <Setter Property="BackgroundColor" Value="{AppThemeBinding Light={StaticResource LightmodePageBackground}, Dark={StaticResource DarkmodePageBackground}}" />
+        <Setter Property="HorizontalOptions" Value="Fill"/>
+        <Setter Property="VerticalOptions" Value="Start"/>
+        <Setter Property="HeightRequest" Value="40"/>
+        <Setter Property="FontSize" Value="24"/>
+        <Setter Property="Margin" Value="0, 0, 10, 0"/>
+        <Setter Property="TextColor" Value="{AppThemeBinding Light={StaticResource LightmodeFontColor}, Dark={StaticResource DarkmodeFontColor}}"/>
     </Style>
     
     <Style TargetType="ActivityIndicator">
         <Setter Property="Color" Value="{AppThemeBinding Light={StaticResource Primary}, Dark={StaticResource White}}" />
+    </Style>
+    
+    <Style TargetType="TableRoot" Class="Settings">
+        <Setter Property="TextColor" Value="{AppThemeBinding Light={StaticResource LightmodeFontColor}, Dark={StaticResource DarkmodeFontColor}}"/>
+    </Style>
+    
+    <Style TargetType="Grid" Class="Popup">
+        <Setter Property="WidthRequest" Value="350" />
+        <Setter Property="BackgroundColor" Value="{AppThemeBinding Light={StaticResource LightmodeBackground}, Dark={StaticResource DarkmodeBackground}}" />
+    </Style>
+    
+    <Style TargetType="Label" Class="Popup">
+        <Setter Property="FontSize" Value="24" />
+        <Setter Property="TextColor" Value="{AppThemeBinding Light={StaticResource LightmodeFontColor}, Dark={StaticResource DarkmodeFontColor}}"/>
+    </Style>
+    
+    <Style TargetType="Entry" Class="Popup">
+        <Setter Property="TextColor" Value="{AppThemeBinding Light={StaticResource LightmodeFontColor}, Dark={StaticResource DarkmodeFontColor}}"/>
+        <Setter Property="FontSize" Value="24" />
+    </Style>
+    
+    <Style TargetType="Button" Class="Popup">
+        <Setter Property="FontSize" Value="14" />
+        <Setter Property="BackgroundColor" Value="#00000000" />
+        <Setter Property="VerticalOptions" Value="End" />
+        <Setter Property="HorizontalOptions" Value="End" />
+        <Setter Property="Margin" Value="5, 5, 5, 5" />
+        <Setter Property="TextColor" Value="{AppThemeBinding Light={StaticResource LightmodeFontColor}, Dark={StaticResource DarkmodeFontColor}}"/>
     </Style>
 
     <Style TargetType="IndicatorView">
