--- a/GameOfLifeMaui/ViewModels/AppShell.xaml
+++ b/GameOfLifeMaui/ViewModels/AppShell.xaml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <Shell
-    x:Class="GameOfLifeMaui.AppShell"
+    x:Class="GameOfLifeMaui.ViewModels.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:GameOfLifeMaui"
+    xmlns:pages="clr-namespace:GameOfLifeMaui.ViewModels.Pages"
     FlyoutBehavior="Disabled">
 
     <ShellContent
         Title="Game Of Life"
-        ContentTemplate="{DataTemplate local:MainPage}"
+        ContentTemplate="{DataTemplate pages:MainPage}"
         Route="MainPage" />
 
 </Shell>
