--- a/GameOfLifeMaui/ViewModels/ColorHolder.xaml
+++ b/GameOfLifeMaui/ViewModels/ColorHolder.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <Frame xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
        xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-       x:Class="GameOfLifeMaui.ColorHolder"
+       x:Class="GameOfLifeMaui.ViewModels.ColorHolder"
        HorizontalOptions="Fill"
        VerticalOptions="Fill"
        Padding="7, 5, 10, 5"
