--- a/GameOfLifeMaui/ViewModels/Pages/SettingsPage.xaml
+++ b/GameOfLifeMaui/ViewModels/Pages/SettingsPage.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="GameOfLifeMaui.SettingsPage"
+             x:Class="GameOfLifeMaui.ViewModels.Pages.SettingsPage"
              Title="Settings">
     
     <ScrollView>
