--- a/GameOfLifeMaui/ViewModels/Popups/CellAgePopup.xaml
+++ b/GameOfLifeMaui/ViewModels/Popups/CellAgePopup.xaml
@@ -2,7 +2,7 @@
 <views:Popup xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
       xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
       xmlns:views="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
-      x:Class="GameOfLifeMaui.Popups.CellAgePopup">
+      x:Class="GameOfLifeMaui.ViewModels.Popups.CellAgePopup">
        
       <Grid class="Popup"
             ColumnSpacing="0"
