--- a/GameOfLifeMaui/ViewModels/Popups/RulestringPopup.xaml
+++ b/GameOfLifeMaui/ViewModels/Popups/RulestringPopup.xaml
@@ -2,7 +2,7 @@
 <views:Popup xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
       xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
       xmlns:views="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
-      x:Class="GameOfLifeMaui.Popups.RulestringPopup">
+      x:Class="GameOfLifeMaui.ViewModels.Popups.RulestringPopup">
        
       <Grid  class="Popup"
              ColumnSpacing="0"
