--- a/GameOfLifeMaui/ViewModels/Pages/SettingsPage.xaml
+++ b/GameOfLifeMaui/ViewModels/Pages/SettingsPage.xaml
@@ -15,6 +15,9 @@
                 <RowDefinition Height="auto"/>
                 <RowDefinition Height="auto"/>
                 <RowDefinition Height="auto"/>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="auto"/>
             </Grid.RowDefinitions>
             <Label Grid.Row="0"
                    class="SettingsSmall"
@@ -52,6 +55,21 @@
             <Grid Grid.Row="6"
                   class="Settings"
                   x:Name="ColorsSection"/>
+            <Label Grid.Row="7"
+                   class="SettingsSmall"
+                   Text="RANDOM STUFF"/>
+            <Label Grid.Row="8"
+                   x:Name="AccelerometerField"
+                   class="Settings"
+                   Text="Accelerometer"/>
+            <Label Grid.Row="9"
+                   x:Name="GyroscopeField"
+                   class="Settings"
+                   Text="Gyroscope"/>
+            <Label Grid.Row="10"
+                   x:Name="TimeField"
+                   class="Settings"
+                   Text="CurrentTime"/>
             </Grid>
     </ScrollView>
     
